linked all files

--- a/joke.html
+++ b/joke.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <h1>Joke website!!</h1>
+    <head>
+        <title>Jokes</title>
+    </head>
+    <body>
+        <link rel="stylesheet" href="joke.css">
+        <script src="joke.js"></script>
+        <h1>Joke website!!</h1>
+    </body>
 </html>
