trying to get api to work

--- a/joke.html
+++ b/joke.html
@@ -7,5 +7,6 @@
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>Joke website!!</h1>
+        <h3 id="joke">Test</h3>
     </body>
 </html>
