added button to reveal the joke

--- a/joke.html
+++ b/joke.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>Joke website!!</h1>
+        <button onclick="showJoke()">Show Joke</button>
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
     </body>
