trying to get specific joke type, not working

--- a/joke.html
+++ b/joke.html
@@ -10,5 +10,9 @@
         <button onclick="showJoke()">Show Joke</button>
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
+
+        <input type="text" id="type">
+        <button onclick="getTypeJoke()">Get Specific Joke Type</button>
+        <h4 id="error"></h4>
     </body>
 </html>
