--- a/joke.html
+++ b/joke.html
@@ -11,8 +11,6 @@
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
 
-        <input type="text" id="type">
-        <button onclick="getTypeJoke()">Get Specific Joke Type</button>
-        <h4 id="error"></h4>
+        <button onclick="getJoke(dad)">Get Programming Joke</button>
     </body>
 </html>
