--- a/joke.html
+++ b/joke.html
@@ -11,6 +11,6 @@
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
 
-        <button onclick="getJoke(dad)">Get Programming Joke</button>
+        <button onclick="getJoke('dad')">Get Programming Joke</button>
     </body>
 </html>
