joke appears when you click on the images!

--- a/joke.html
+++ b/joke.html
@@ -11,14 +11,15 @@
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
 
-        <button onclick="getJoke('dad')">Get Programming Joke</button>
+        <!--<button onclick="getJoke('dad')">Get Programming Joke</button>-->
+
         <!--deviantart-->
-        <image src="images/js.png" width="340px" height="500px"></image>
+        <image onclick="getJoke('programming')" src="images/js.png" width="340px" height="500px"></image>
         <!--kingdom hearts wiki-->
-        <image src="images/wt.png" width="210px" height="500px"></image>
+        <image onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></image>
         <!--deviantart-->
-        <image src="images/es.png" width="240px" height="500px"></image>
+        <image onclick="getJoke('general')" src="images/es.png" width="240px" height="500px"></image>
         <!--VS Battles wiki-->
-        <image src="images/hb.webp" width="270px" height="500px"></image>
+        <image onclick="getJoke('dad')" src="images/hb.webp" width="270px" height="500px"></image>
     </body>
 </html>
