added random joke, need to see if the timer works for that. timer works for 4 joke types, needed to clear cache

--- a/joke.html
+++ b/joke.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>Joke website!!</h1>
-        <button onclick="showJoke()">Show Joke</button>
+        <!--Reddit-->
+        <image onclick="showJoke()" src="images/coin2.png" width="350px" height="300px"></image>
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
 
