added background image, put them in a row, added labels

--- a/joke.html
+++ b/joke.html
@@ -15,12 +15,26 @@
         <!--<button onclick="getJoke('dad')">Get Programming Joke</button>-->
 
         <!--deviantart-->
-        <image onclick="getJoke('programming')" src="images/js.png" width="340px" height="500px"></image>
-        <!--kingdom hearts wiki-->
-        <image onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></image>
-        <!--deviantart-->
-        <image onclick="getJoke('general')" src="images/es.png" width="240px" height="500px"></image>
-        <!--VS Battles wiki-->
-        <image onclick="getJoke('dad')" src="images/hb.webp" width="270px" height="500px"></image>
+        <div class="container">
+            <div class="item">
+                <image onclick="getJoke('programming')" src="images/js.png" width="340px" height="500px"></image>
+                <h4>Programming</h4>
+            </div>
+            <div class="item">
+                <!--kingdom hearts wiki-->
+                <image onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></image>
+                <h4>Knock-knock</h4>
+            </div>
+            <div class="item">
+                <!--deviantart-->
+                <image onclick="getJoke('general')" src="images/es.png" width="240px" height="500px"></image>
+                <h4>General</h4>
+            </div>
+            <div class="item">
+                <!--VS Battles wiki-->
+                <image onclick="getJoke('dad')" src="images/hb.webp" width="270px" height="500px"></image>
+                <h4>Dad</h4>
+            </div>
+        </div>
     </body>
 </html>
