joke logic works, soon going to add an intro screen with more effects

--- a/joke.html
+++ b/joke.html
@@ -8,7 +8,7 @@
         <script src="joke.js"></script>
         <h1>Joke website!!</h1>
         <!--Reddit-->
-        <image onclick="showJoke()" src="images/coin2.png" width="350px" height="300px"></image>
+        <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px"></img>
         <h3 id="jokeSetup">Joke will appear here</h3>
         <h3 id="jokePunchline"></h3>
 
@@ -17,22 +17,22 @@
         <!--deviantart-->
         <div class="container">
             <div class="item">
-                <image onclick="getJoke('programming')" src="images/js.png" width="340px" height="500px"></image>
+                <img onclick="getJoke('programming')" src="images/js.png" width="340px" height="500px"></img>
                 <h4>Programming</h4>
             </div>
             <div class="item">
                 <!--kingdom hearts wiki-->
-                <image onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></image>
+                <img onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></img>
                 <h4>Knock-knock</h4>
             </div>
             <div class="item">
                 <!--deviantart-->
-                <image onclick="getJoke('general')" src="images/es.png" width="240px" height="500px"></image>
+                <img onclick="getJoke('general')" src="images/es.png" width="240px" height="500px"></img>
                 <h4>General</h4>
             </div>
             <div class="item">
                 <!--VS Battles wiki-->
-                <image onclick="getJoke('dad')" src="images/hb.webp" width="270px" height="500px"></image>
+                <img onclick="getJoke('dad')" src="images/hb.webp" width="270px" height="500px"></img>
                 <h4>Dad</h4>
             </div>
         </div>
