centered labels for the characters

--- a/joke.html
+++ b/joke.html
@@ -9,7 +9,7 @@
         <h1>Joke website!!</h1>
         <!--Reddit-->
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px"></img>
-        <h3 id="jokeSetup">Joke will appear here</h3>
+        <h3 id="jokeSetup"></h3>
         <h3 id="jokePunchline"></h3>
 
         <!--<button onclick="getJoke('dad')">Get Programming Joke</button>-->
