--- a/joke.html
+++ b/joke.html
@@ -9,8 +9,8 @@
         <h1>Joke website!!</h1>
         <!--Reddit-->
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px"></img>
-        <h3 id="jokeSetup"></h3>
-        <h3 id="jokePunchline"></h3>
+        <h3 id="jokeSetup">Setup:</h3>
+        <h3 id="jokePunchline">Answer:</h3>
 
         <!--<button onclick="getJoke('dad')">Get Programming Joke</button>-->
 
