centered image and added styling

--- a/joke.html
+++ b/joke.html
@@ -6,9 +6,10 @@
     <body>
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
-        <h1>Joke website!!</h1>
+        <!--<h1>Joke website!!</h1>-->
         <!--Reddit-->
-        <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px"></img>
+        <h3>Click the medallion for a random joke!</h3>
+        <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
 
