added homepage animation for lettering, now will connect homepage and joke page

--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
     <head>
         <title>Jokes</title>
     </head>
-    <body>
+    <body class="home">
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
-        <h1>main page</h1>
+        <h1>PIRATES OF THE CARRIBEAN</h1>
     </body>
 </html>
