--- a/joke.html
+++ b/joke.html
@@ -3,7 +3,7 @@
     <head>
         <title>Jokes</title>
     </head>
-    <body>
+    <body class="joke">
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <!--<h1>Joke website!!</h1>-->
