--- a/home.html
+++ b/home.html
@@ -7,5 +7,6 @@
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>PIRATES OF THE CARRIBEAN</h1>
+        <a class="button" href="joke.html">Enter</button>
     </body>
 </html>
