going to implement a random number of jokes now by adding a secret page if you click on the compass

--- a/joke.html
+++ b/joke.html
@@ -8,7 +8,8 @@
         <script src="joke.js"></script>
         <!--<h1>Joke website!!</h1>-->
         <!--Reddit-->
-        <h3>Click the medallion for a random joke!</h3>
+        <h3>Click the medallion for a random joke! Click the characters for the joke type specified. Wait for the answer!</h3>
+        <h3>ex: click Jack for a programming joke</h3>
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
@@ -25,6 +26,13 @@
                 <!--kingdom hearts wiki-->
                 <img onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></img>
                 <h4>Knock-knock</h4>
+            </div>
+            <div class="itemSecret">
+                <!--fortnite wiki-->
+                <img onclick="switchPage()" src="images/comp.webp" width="60px" height="60px"><img>
+                <p>click on the</p>
+                <p>compass....if</p>
+                <p>you dare... </p>
             </div>
             <div class="item">
                 <!--deviantart-->
