--- a/random.html
+++ b/random.html
@@ -15,7 +15,9 @@
     </head>
     <body class="home">
         <link rel="stylesheet" href="joke.css">
-        <h1>PIRATES OF THE CARRIBEAN</h1>
-        <a id="switch" class="button-disabled" href="joke.html">Enter</a>
+        <h1>The BLACK PEARL</h1>
+        <h3>Enter the number of jokes you want in the textbox below</h3>
+        <input type="text"></input>
+        <button onclick="check()">Enter</button>
     </body>
 </html>
