--- a/random.html
+++ b/random.html
@@ -15,9 +15,12 @@
     </head>
     <body class="home">
         <link rel="stylesheet" href="joke.css">
-        <h1>The BLACK PEARL</h1>
+        <h1>The Black Pearl</h1>
         <h3>Enter the number of jokes you want in the textbox below</h3>
         <input type="text"></input>
         <button onclick="check()">Enter</button>
+        <h3 id="jokeSetup">Setup:</h3>
+        <h3 id="jokePunchline">Answer:</h3>
+        <img src="raggeti"></img>
     </body>
 </html>
