added styling to the random page, but all the jokes are not showing up

--- a/random.html
+++ b/random.html
@@ -13,14 +13,14 @@
         })*/
     </script>
     </head>
-    <body class="home">
+    <body class="joke">
         <link rel="stylesheet" href="joke.css">
-        <h1>The Black Pearl</h1>
+        <h1 id="random">The Black Pearl</h1>
         <h3>Enter the number of jokes you want in the textbox below</h3>
         <input type="text"></input>
         <button onclick="check()">Enter</button>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
-        <img src="raggeti"></img>
+        <!--<img src="raggeti"></img>-->
     </body>
 </html>
