styled the page and going to add different categories in a grid format, similar to jokepage but for a random number of specific joke types, will also add a navbar

--- a/random.html
+++ b/random.html
@@ -3,11 +3,11 @@
     <head>
         <title>Jokes</title>
     </head>
-    <body class="joke">
+    <body class="random">
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
-        <h1 id="random">The Black Pearl</h1>
-        <h3>Enter the number of jokes you want in the textbox below</h3>
+        <h1>The Black Pearl</h1>
+        <h3>Enter the number of random jokes you want in the textbox below</h3>
         <input type="text"></input>
         <button onclick="check()">Enter</button>
         <div id="manyJokes"></div>
