actually the logic was wrong before, needed to define jokes

--- a/random.html
+++ b/random.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>The Black Pearl</h1>
-        <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100.</h3>
+        <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
         <input type="text"></input>
         <button onclick="check()">Enter</button>
         <div id="manyJokes"></div>
