added a way to take you back to the main page

--- a/random.html
+++ b/random.html
@@ -4,6 +4,8 @@
         <title>Jokes</title>
     </head>
     <body class="random">
+        <a href="joke.html" class="button-enabled">Go back to previous</a></li>
+
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>The Black Pearl</h1>
