trying to create a grid layout, but its not working

--- a/random.html
+++ b/random.html
@@ -9,10 +9,38 @@
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <h1>The Black Pearl</h1>
-        <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
-        <input type="text"></input>
-        <button onclick="check()">Enter</button>
-        <div id="manyJokes"></div>
+        <div class="grid">
+            <div>
+                <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
+                <input type="text"></input>
+                <button onclick="check()">Enter</button>
+                <div id="manyJokes"></div>
+            </div>
+            <div>
+                <h3>Enter the number of random programming jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
+                <input type="text"></input>
+                <button onclick="checkPro()">Enter</button>
+                <div id="manyJokes"></div>
+            </div>
+            <div>
+                <h3>Enter the number of random knock-knock jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
+                <input type="text"></input>
+                <button onclick="checkKnock()">Enter</button>
+                <div id="manyJokes"></div>
+            </div>
+            <div>
+                <h3>Enter the number of random general jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
+                <input type="text"></input>
+                <button onclick="checkGen()">Enter</button>
+                <div id="manyJokes"></div>
+            </div>
+            <div>
+                <h3>Enter the number of random dad jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
+                <input type="text"></input>
+                <button onclick="checkDad()">Enter</button>
+                <div id="manyJokes"></div>
+            </div>
+        </div>
         <!--<img src="raggeti"></img>-->
     </body>
 </html>
