--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Jokes</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script>
         document.addEventListener("DOMContentLoaded", ()=>{
         const switchPage = document.getElementById("switch");
