grid layout works + added cool animation of black pearl ship revealing title!

--- a/random.html
+++ b/random.html
@@ -10,7 +10,11 @@
 
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
-        <h1>The Black Pearl</h1>
+        <div class="container">
+            <h1 style= "color:black;">The Black Pearl</h1>
+            <!--Cyprus Boats-->
+            <img src="images/boat.webp" height="300px" width="400px" ></img>
+        </div>
         <div class="grid">
             <div>
                 <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
@@ -22,25 +26,25 @@
                 <h3>Enter the number of random programming jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
                 <input type="text"></input>
                 <button onclick="checkPro()">Enter</button>
-                <div id="manyJokes"></div>
+                <div id="manyProJokes"></div>
             </div>
             <div>
                 <h3>Enter the number of random knock-knock jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
                 <input type="text"></input>
                 <button onclick="checkKnock()">Enter</button>
-                <div id="manyJokes"></div>
+                <div id="manyKnockJokes"></div>
             </div>
             <div>
                 <h3>Enter the number of random general jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
                 <input type="text"></input>
                 <button onclick="checkGen()">Enter</button>
-                <div id="manyJokes"></div>
+                <div id="manyGenJokes"></div>
             </div>
             <div>
                 <h3>Enter the number of random dad jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
                 <input type="text"></input>
                 <button onclick="checkDad()">Enter</button>
-                <div id="manyJokes"></div>
+                <div id="manyDadJokes"></div>
             </div>
         </div>
         <!--<img src="raggeti"></img>-->
