trying to get each type of joke for random numbers now

--- a/random.html
+++ b/random.html
@@ -24,27 +24,27 @@
             </div>
             <div>
                 <h3>Enter the number of random programming jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
-                <input type="text"></input>
-                <button onclick="checkPro()">Enter</button>
-                <div id="manyProJokes"></div>
+                <input id="programming0" type="text"></input>
+                <button onclick="checkType('programming')">Enter</button>
+                <div id="programming"></div>
             </div>
             <div>
                 <h3>Enter the number of random knock-knock jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
-                <input type="text"></input>
-                <button onclick="checkKnock()">Enter</button>
-                <div id="manyKnockJokes"></div>
+                <input id="knock-knock0" type="text"></input>
+                <button onclick="checkType('knock-knock')">Enter</button>
+                <div id="knock-knock"></div>
             </div>
             <div>
                 <h3>Enter the number of random general jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
-                <input type="text"></input>
-                <button onclick="checkGen()">Enter</button>
-                <div id="manyGenJokes"></div>
+                <input id="general0" type="text"></input>
+                <button onclick="checkType('general')">Enter</button>
+                <div id="general"></div>
             </div>
             <div>
                 <h3>Enter the number of random dad jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
-                <input type="text"></input>
-                <button onclick="checkDad()">Enter</button>
-                <div id="manyDadJokes"></div>
+                <input id="dad0" type="text"></input>
+                <button onclick="check('dad')">Enter</button>
+                <div id="dad"></div>
             </div>
         </div>
         <!--<img src="raggeti"></img>-->
