the if is working but it's not going into the else if

--- a/random.html
+++ b/random.html
@@ -43,7 +43,7 @@
             <div>
                 <h3>Enter the number of random dad jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
                 <input id="dad0" type="text"></input>
-                <button onclick="check('dad')">Enter</button>
+                <button onclick="checkType('dad')">Enter</button>
                 <div id="dad"></div>
             </div>
         </div>
