--- a/joke.html
+++ b/joke.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jokes</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
     </head>
     <body class="joke">
         <link rel="stylesheet" href="joke.css">
