--- a/random.html
+++ b/random.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jokes</title>
+        <!--pngtree-->
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
     </head>
     <body class="random">
         <a href="joke.html" class="button-enabled">Go back to previous</a></li>
