--- a/random.html
+++ b/random.html
@@ -9,7 +9,6 @@
     </head>
     <body class="random">
         <a href="joke.html" class="button-enabled">Go back to previous</a></li>
-
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <div class="container">
@@ -18,7 +17,7 @@
             <img src="images/boat.webp" height="300px" width="400px" ></img>
         </div>
         <p>*if you enter more jokes than the API has, it will just give you all the jokes it has</p>
-        <p>Ex: There's only 2 dad jokes, so even if you type 4, it will give you just the two to avoid repeats</p>
+        <p>Ex: There's only 2 dad jokes, so even if you type 4 in the dad joke section, it will give you two (all it has) to avoid repeats</p>
         <div class="grid">
             <div>
                 <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
