trying to fix random image pop up

--- a/random.html
+++ b/random.html
@@ -23,7 +23,7 @@
                 <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
                 <input type="text"></input>
                 <!--reddit-->
-                <img id="surprise"></img>
+                <img id="surprise" width="200px"></img>
                 <button onclick="check()">Enter</button>
                 <div id="manyJokes"></div>
             </div>
@@ -32,7 +32,7 @@
                 <input id="programming0" type="text"></input>
                 <button onclick="checkType('programming')">Enter</button>
                 <!--reddit-->
-                <img id="surprise"></img>
+                <img id="surprise1" width="200px"></img>
                 <div id="programming"></div>
             </div>
             <div>
@@ -40,7 +40,7 @@
                 <input id="knock-knock0" type="text"></input>
                 <button onclick="checkType('knock-knock')">Enter</button>
                 <!--reddit-->
-                <img id="surprise"></img>
+                <img id="surprise2" width="200px"></img>
                 <div id="knock-knock"></div>
             </div>
             <div>
@@ -48,7 +48,7 @@
                 <input id="general0" type="text"></input>
                 <button onclick="checkType('general')">Enter</button>
                 <!--reddit-->
-                <img id="surprise"></img>
+                <img id="surprise3" width="200px"></img>
                 <div id="general"></div>
             </div>
             <div>
@@ -56,7 +56,7 @@
                 <input id="dad0" type="text"></input>
                 <button onclick="checkType('dad')">Enter</button>
                 <!--reddit-->
-                <img id="surprise"></img>
+                <img id="surprise4" width="200px"></img>
                 <div id="dad"></div>
             </div>
         </div>
