trying to store joke in localStorage. adding to js but creating a like function for the like button

--- a/joke.html
+++ b/joke.html
@@ -16,7 +16,7 @@
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
-        <button onclick="like()" class="button-enabled-like">Like</button>
+        <button onclick="like()" class="button-like" id="likeButton" style="display:none;">Like</button>
 
         <!--deviantart-->
         <div class="container">
