--- a/joke.html
+++ b/joke.html
@@ -16,8 +16,8 @@
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
-        <button onclick="like()" class="button-like" id="likeButton" style="display:none;">Like</button>
-
+        <button id="likeButton" style="display:none;">Like</button>
+        <button onclick="viewFavs()">View Favorites</button>
         <!--deviantart-->
         <div class="container">
             <div class="item">
