--- a/random.html
+++ b/random.html
@@ -9,6 +9,7 @@
     </head>
     <body class="random">
         <a href="joke.html" class="button-enabled">Go back to previous</a></li>
+        <button onclick="viewFavs()">View Favorites</button>
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
         <div class="container">
