--- a/joke.html
+++ b/joke.html
@@ -11,7 +11,9 @@
         <script src="joke.js"></script>
         <!--<h1>Joke website!!</h1>-->
         <!--Reddit-->
-        <h3>Click the medallion for a random joke! Click the characters for the joke type specified. Wait for the answer!</h3>
+        <h3>Click the medallion for a random joke! Wait for the answer, then if you haven't seen the joke before, you have the option to like the joke.</h3>
+        <h3>Click view favorites at any time to see the jokes you've liked.</h3><br>
+        <h3>Click the characters for the joke type specified. Wait for the answer!</h3>
         <h3>ex: click Jack for a programming joke</h3>
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
