done now! will edit the readme now

--- a/random.html
+++ b/random.html
@@ -19,6 +19,7 @@
         </div>
         <p>*if you enter more jokes than the API has, it will just give you all the jokes it has</p>
         <p>Ex: There's only 2 dad jokes, so even if you type 4 in the dad joke section, it will give you two (all it has) to avoid repeats</p>
+        <h3 style="text-align:left">Sometimes a random image will pop up and surprise you! :)</h3>
         <div class="grid">
             <div>
                 <h3>Enter the number of random jokes you want in the textbox below, greater than 0 and less than 100. Decimals are truncated.</h3>
