finished the readme!

--- a/joke.html
+++ b/joke.html
@@ -9,7 +9,6 @@
     <body class="joke">
         <link rel="stylesheet" href="joke.css">
         <script src="joke.js"></script>
-        <!--<h1>Joke website!!</h1>-->
         <!--Reddit-->
         <h3>Click the medallion for a random joke! Wait for the answer, then if you haven't seen the joke before, you have the option to like the joke.</h3>
         <h3>Click view favorites at any time to see the jokes you've liked.</h3><br>
@@ -18,7 +17,7 @@
         <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
-        <button id="likeButton" style="display:none;">Like</button>
+        <button id="likeButton" style="display:none;">Favorite this joke</button>
         <button onclick="viewFavs()">View Favorites</button>
         <!--deviantart-->
         <div class="container">
