added file paths

--- a/favorite.html
+++ b/favorite.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jokes</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.png">
         <script>
         //once it loads, add all the favorite jokes
         document.addEventListener("DOMContentLoaded", ()=>{
@@ -21,8 +21,8 @@
         </script>
     </head>
     <body class="joke">
-        <link rel="stylesheet" href="joke.css">
-        <script src="joke.js"></script>
+        <link rel="stylesheet" href="./joke.css">
+        <script src="./joke.js"></script>
 
         <h3 style="font-size:40px;">Here are all your favorite jokes!</h3>
         
