--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Jokes</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script>
@@ -17,7 +17,7 @@
         </script>
     </head>
     <body class="home">
-        <link rel="stylesheet" href="joke.css">
+        <link rel="stylesheet" href="./joke.css">
         <h1>PIRATES OF THE CARRIBEAN</h1>
         <a id="switch" class="button-disabled" href="joke.html">Enter</a>
     </body>
