--- a/joke.html
+++ b/joke.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jokes</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     </head>
     <body class="joke">
         <link rel="stylesheet" href="joke.css">
@@ -14,7 +14,7 @@
         <h3>Click view favorites at any time to see the jokes you've liked.</h3><br>
         <h3>Click the characters for the joke type specified. Wait for the answer!</h3>
         <h3>ex: click Jack for a programming joke</h3>
-        <img onclick="showJoke()" src="images/coin2.png" width="350px" height="300px" class="med"></img>
+        <img onclick="showJoke()" src="./images/coin2.png" width="350px" height="300px" class="med"></img>
         <h3 id="jokeSetup">Setup:</h3>
         <h3 id="jokePunchline">Answer:</h3>
         <button id="likeButton" style="display:none;">Favorite this joke</button>
@@ -22,29 +22,29 @@
         <!--deviantart-->
         <div class="container">
             <div class="item">
-                <img onclick="getJoke('programming')" src="images/js.png" width="340px" height="500px"></img>
+                <img onclick="getJoke('programming')" src="./images/js.png" width="340px" height="500px"></img>
                 <h4>Programming</h4>
             </div>
             <div class="item">
                 <!--kingdom hearts wiki-->
-                <img onclick="getJoke('knock-knock')" src="images/wt.png" width="210px" height="500px"></img>
+                <img onclick="getJoke('knock-knock')" src="./images/wt.png" width="210px" height="500px"></img>
                 <h4>Knock-knock</h4>
             </div>
             <div class="itemSecret">
                 <!--fortnite wiki-->
-                <img onclick="switchPage()" src="images/comp.webp" width="60px" height="60px"><img>
+                <img onclick="switchPage()" src="./images/comp.webp" width="60px" height="60px"><img>
                 <p>click on the</p>
                 <p>compass....if</p>
                 <p>you dare... </p>
             </div>
             <div class="item">
                 <!--deviantart-->
-                <img onclick="getJoke('general')" src="images/es.png" width="240px" height="500px"></img>
+                <img onclick="getJoke('general')" src="./images/es.png" width="240px" height="500px"></img>
                 <h4>General</h4>
             </div>
             <div class="item">
                 <!--VS Battles wiki-->
-                <img onclick="getJoke('dad')" src="images/hb.webp" width="270px" height="500px"></img>
+                <img onclick="getJoke('dad')" src="./images/hb.webp" width="270px" height="500px"></img>
                 <h4>Dad</h4>
             </div>
         </div>
