--- a/random.html
+++ b/random.html
@@ -5,17 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jokes</title>
         <!--pngtree-->
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     </head>
     <body class="random">
-        <a href="joke.html" class="button-enabled">Go back to previous</a></li>
+        <a href="./joke.html" class="button-enabled">Go back to previous</a></li>
         <button onclick="viewFavs()">View Favorites</button>
-        <link rel="stylesheet" href="joke.css">
-        <script src="joke.js"></script>
+        <link rel="stylesheet" href="./joke.css">
+        <script src="./joke.js"></script>
         <div class="container">
             <h1 style= "color:black;">The Black Pearl</h1>
             <!--Cyprus Boats-->
-            <img src="images/boat.webp" height="300px" width="400px" ></img>
+            <img src="./images/boat.webp" height="300px" width="400px" ></img>
         </div>
         <p>*if you enter more jokes than the API has, it will just give you all the jokes it has</p>
         <p>Ex: There's only 2 dad jokes, so even if you type 4 in the dad joke section, it will give you two (all it has) to avoid repeats</p>
